--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "pmdunggh/pdftable",
+    "version": "2.0.0",
     "type": "library",
     "description": "Generate PDF report from HTML template",
     "keywords": ["pdflib","pdftable","html2pdf"],
